kubernetes/apps/base/headlamp/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp
  namespace: headlamp
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`headlamp.local`)
      kind: Rule
      services:
        - name: headlamp
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
  tls:
    secretName: headlamp-tls
